Fixed body scrolling in background bug on mobile

--- a/mission-ceramics/src/index.css
+++ b/mission-ceramics/src/index.css
@@ -23,3 +23,7 @@ html {
   overflow-x: initial;
   /* width: 100%; */
 }
+
+body.modal-open{
+  overflow:hidden;
+}
